    <resources>
    <string-array name="cate">
        <item>Animals</item>
        <item>Children</item>
        <item>Home</item>
        <item>Furniture</item>
        <item>Garden</item>
        <item>Sport</item>
        <item>Food</item>
        <item>Clothes</item>
        <item>Electronics</item>
        <item>Tools</item>
        <item>Art</item>
        <item>Health</item>
        <item>Other</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Slovenčina</item>
        <item>Čeština</item>
        <item>中文</item>
    </string-array>
    <string-array name="languages_short">
        <item>en</item>
        <item>sk</item>
        <item>cs</item>
        <item>zh</item>
    </string-array>


    <string name="app_name">Vava_Project</string>
    <string name="user_name">Username</string>
    <string name="log_button">Login</string>
    <string name="reg_button">Register</string>
    <string name="pass_text">Password</string>
    <string name="write_name">Enter your username:</string>
    <string name="write_pass">Enter your password:</string>
    <string name="write_reppassw">Repeat your password:</string>
    <string name="write_email">Write your email:</string>
    <string name="register_button">Register</string>
    <string name="acepted_req">Accepted</string>
    <string name="myreq_button">My request</string>
    <string name="map_req">Map view</string>
    <string name="menu_dis">Distance</string>
    <string name="menu_adres">Address</string>
    <string name="item_name">Item name</string>
    <string name="menu_description">Description</string>
    <string name="button_accept">Accept the order</string>
    <string name="create_st">Create</string>
    <string name="info">Info</string>
    <string name="googleAPI">AIzaSyCitQoGdLxXW0z4zIy7bqwHSrSx0P1xKhU</string>
    <string name="Open">Opening?</string>
    <string name="Close">Closing?</string>
    <string name="finish_req">Finish</string>
    <string name="navigation_main_menu">Main Menu</string>
    <string name="navigation_my_account">My account</string>
    <string name="navigation_my_requests">My requests</string>
    <string name="navigation_accepted_requests">Accepted requests</string>
    <string name="navigation_open_map">Map</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_log_out">Log out</string>
    <string name="popup_detail_info">Detail information</string>
    <string name="save_button">Save</string>
    <string name="label_choose_language">Choose language</string>
    <string name="log_out_title">Do you want to log out?</string>
    <string name="log_out_desc">Do you really want to log out?</string>
    <string name="log_out_yes">Yes, log out</string>
    <string name="log_out_no">No, stay logged in</string>
    <string name="quit_title">Do you want to quit?</string>
    <string name="quit_desc">Do you really want to quit?</string>
    <string name="quit_no">No, stay</string>
    <string name="quit_yes">Yes, quit</string>
    <string name="request_accept_title">Do you want to accept this request?</string>
    <string name="request_accept_desc">Do you really want to accept this request? You can`t cancel this!</string>
    <string name="request_accept_yes">Accept</string>
    <string name="request_accept_no">Decline</string>
    <string name="request_confirm_title">Do you want to set request as done?</string>
    <string name="request_confirm_desc">This will set request as done. Do you want to continue?</string>
    <string name="request_delete_title">Do you want to delete this request?</string>
    <string name="request_delete_desc">This will delete the request. Do you wan to continue?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No.</string>
    <string name="empty_string_error">This field needs to be filled</string>
    <string name="wrong_credentials_error">Wrong credentials!</string>
    <string name="password_equal_error">Passwords are not equal!</string>
    <string name="invalid_chars_error">This field uses invalid characters!</string>
    <string name="short_username_error">Your username need to have at least 6 characters</string>
    <string name="short_password_error">Your password needs to have at least 8 characters</string>
    <string name="username_taken_error">Username already exists</string>
    <string name="no_more_items_error">No more available items!</string>
    <string name="recaptcha_error">ReCAPTCHA error!</string>
    <string name="navigation_profile">Profile</string>
    <string name="finish_delete">Finish</string>
    <string name="delete_finish">Delete</string>
    <string name="create_title_too_long">Title can only have up to 30 characters!</string>
    <string name="create_desc_too_long">Description can only have up to 120 characters!</string>
    <string name="request_taken">Request\nwas taken</string>
    <string name="request_free">Request\nis free</string>
    <string name="gps_not_available">Gps not available!</string>
    <string name="gps_not_available_desc">We can`t locate you! If you want to add item make sure you are at right location with a good signal.</string>
    <string name="try_again">Try again.</string>
    <string name="cancel">Cancel.</string>
    <string name="no_google_services">Gooogle play services not available</string>
    <string name="long_username_error">Your username can have max 25 characters</string>
    <string name="long_password_error">Your password can have max 25 characters!</string>
    <string name="registration_succesful">Account registered!</string>
    <string name="go_to_settings_gps">Go to settings to enable GPS</string>
    <string name="gps_disabled">Gps is disabled! Please enable it to continue.</string>
    <string name="item_accepted">Item accepted!</string>
    <string name="level">Level</string>
    <string name="reputation">Reputation</string>
</resources>
