<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_weight="33.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listNameX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/listAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_adres" />

            <TextView
                android:id="@+id/listDistanceX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_dis" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_weight="33.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listItemX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_name" />

            <TextView
                android:id="@+id/listDesX"
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:text="@string/menu_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/button_accept"
                app:srcCompat="?android:attr/textCheckMark" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>