<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borrow_it"
    tools:context=".activities.LoginActivity">

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="444dp"
        android:background="@drawable/button_designe_1"
        android:text="@string/log_button"
        android:textColor="@color/pureWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="280dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/pass_text"
        android:inputType="textPassword"
        android:textColor="@color/orangePrimary"
        android:textColorHint="@color/orangePrimary"
        app:backgroundTint="@color/orangePrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="548dp"
        android:background="@drawable/button_designe_2"
        android:text="@string/reg_button"
        android:textColor="@color/pureWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="184dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="@color/orangePrimary"
        android:textColorHint="@color/orangePrimary"
        app:backgroundTint="@color/orangePrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>