<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.RegistrationActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="54dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_designe_3"
        android:text="@string/reg_button"
        android:textColor="@color/pureWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwEditTextLayoutReg2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:textColor="@color/orangePrimary"
        android:textColorHint="@color/orangePrimary"
        app:backgroundTint="@color/orangePrimary"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/textlabel_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints="@string/write_name"
            android:ems="10"
            android:hint="@string/write_name"
            android:inputType="textNoSuggestions"
            android:textColor="@color/orangePrimary"
            android:textColorHint="@color/orangePrimary"
            app:backgroundTint="@color/orangePrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwEditTextLayoutReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout"
        android:textColor="@color/orangePrimary"
        android:textColorHint="@color/orangePrimary"
        app:backgroundTint="@color/orangePrimary"
        app:hintTextAppearance="@style/textlabel_hint"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/passwEditTextReg"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints="@string/write_pass"
            android:ems="10"
            android:hint="@string/write_pass"
            android:inputType="textPassword"
            android:textColor="@color/orangePrimary"
            android:textColorHint="@color/orangePrimary"
            app:backgroundTint="@color/orangePrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwEditTextLayoutReg2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwEditTextLayoutReg"
        android:textColor="@color/orangePrimary"
        android:textColorHint="@color/orangePrimary"
        app:backgroundTint="@color/orangePrimary"
        app:hintTextAppearance="@style/textlabel_hint"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/passwEditTextReg2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints="@string/write_reppassw"
            android:ems="10"
            android:hint="@string/write_reppassw"
            android:inputType="textPassword"
            android:textColor="@color/orangePrimary"
            android:textColorHint="@color/orangePrimary"
            app:backgroundTint="@color/orangePrimary" />
    </com.google.android.material.textfield.TextInputLayout>





</androidx.constraintlayout.widget.ConstraintLayout>